fixed a navbar issue on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -53,18 +53,7 @@ p {
 }
 
 .modal-content {
-    position: relative;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    width: 100%;
-    pointer-events: auto;
     background-color: #2e2b2b !important;
-    background-clip: padding-box;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 0.3rem;
-    outline: 0;
 }
 
 .modal-header .close {
@@ -83,10 +72,6 @@ p {
 }
 
 .ql-toolbar.ql-snow {
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-    padding: 8px;
     background-color: whitesmoke !important;
 }
 
@@ -107,29 +92,13 @@ p {
 
 
 .m_396ce5cb {
-    --day-size-xs: calc(1.875rem * var(--mantine-scale));
-    --day-size-sm: calc(2.25rem * var(--mantine-scale));
-    --day-size-md: calc(2.625rem * var(--mantine-scale));
-    --day-size-lg: calc(3rem * var(--mantine-scale));
-    --day-size-xl: calc(3.375rem * var(--mantine-scale));
-    --day-size: var(--day-size-sm);
-    width: var(--day-size, var(--day-size-sm));
-    height: var(--day-size, var(--day-size-sm));
-    font-size: calc(var(--day-size) / 2.8);
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    user-select: none;
-    cursor: pointer;
-    background-color: transparent;
-    border-radius: var(--mantine-radius-default);
-     color: white !important;
-    opacity: 1;
+    color: white !important;
 }
 
 [data-mantine-color-scheme='light'] .m_396ce5cb:hover:where(:not([data-static], [data-disabled], [data-selected], [data-in-range])) {
         background-color: #0094ce !important;
-    }
+}
+
 .navbar-link {
     padding: 0.5rem 1rem;
     border-radius: 0.25rem;
@@ -166,7 +135,6 @@ p {
 div .m_3eebeb36 {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
-    padding-left: calc(1rem* var(--mantine-scale));
 }
 
 div .m_6d731127 {
@@ -194,34 +162,8 @@ a:hover {
 
 
 .m_8d3f4000 {
-    --ai-size-xs: calc(1.125rem * var(--mantine-scale));
-    --ai-size-sm: calc(1.375rem * var(--mantine-scale));
-    --ai-size-md: calc(1.75rem * var(--mantine-scale));
-    --ai-size-lg: calc(2.125rem * var(--mantine-scale));
-    --ai-size-xl: calc(2.75rem * var(--mantine-scale));
-    --ai-size-input-xs: calc(1.875rem * var(--mantine-scale));
-    --ai-size-input-sm: calc(2.25rem * var(--mantine-scale));
-    --ai-size-input-md: calc(2.625rem * var(--mantine-scale));
-    --ai-size-input-lg: calc(3.125rem * var(--mantine-scale));
-    --ai-size-input-xl: calc(3.75rem * var(--mantine-scale));
-    --ai-size: var(--ai-size-md);
-    --ai-color: var(--mantine-color-white);
-    line-height: 1;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    user-select: none;
-    overflow: hidden;
-    width: var(--ai-size);
-    height: var(--ai-size);
-    min-width: var(--ai-size);
-    min-height: var(--ai-size);
-    border-radius: var(--ai-radius, var(--mantine-radius-default));
     background:  black;
     color: #0094ce;
-    border: var(--ai-bd, calc(0.0625rem* var(--mantine-scale)) solid transparent);
-    cursor: pointer;
 }
 
 .note-modal .modal-dialog {
@@ -229,4 +171,12 @@ a:hover {
     outline: 0;
     border-radius: 5px;
     box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+}
+
+.right-scroll-bar-position {
+     right: 0px !important;
+}
+
+.m_3b16f56b {
+     right: 0px !important;
 }
